--- a/services/package.json
+++ b/services/package.json
@@ -1,7 +1,8 @@
 {
   "author": "",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.8.1"
   },
   "description": "",
   "keywords": [],
