--- a/deck-frontend/package.json
+++ b/deck-frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.11",
+    "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
