--- a/services/package.json
+++ b/services/package.json
@@ -1,20 +1,23 @@
 {
   "author": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.8.1"
+    "mongoose": "^6.8.1",
+    "nodemon": "^2.0.20"
   },
   "description": "",
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "ts-node": "^10.9.1"
+  },
   "keywords": [],
   "license": "MIT",
   "main": "index.js",
   "name": "services",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/index.ts\""
   },
-  "version": "1.0.0",
-  "devDependencies": {
-    "@types/express": "^4.17.15",
-    "ts-node": "^10.9.1"
-  }
+  "version": "1.0.0"
 }
