--- a/deck-frontend/package.json
+++ b/deck-frontend/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
-    "react-spinner-material": "^1.4.0"
+    "react-spinner-material": "^1.4.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
